--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,9 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/seatbooking/seatbooking.css">
+      <link rel="stylesheet" href="app/timings/timings.css">
+        <link rel="stylesheet" href="components/footer/footer.css">
+        <link rel="stylesheet" href="components/navbar/navbar.css">
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
@@ -79,6 +82,8 @@
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/booking/booking.service.js"></script>
+      <script src="app/confirmation/confirmation.controller.js"></script>
+      <script src="app/confirmation/confirmation.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/movierating/movierating.controller.js"></script>
