--- a/client/app/timings/timings.html
+++ b/client/app/timings/timings.html
@@ -1,2 +1,19 @@
-<div><button ng-repeat="date in timingsCtrl.dates" ng-click="timingsCtrl.getTheatres(date)">{{date}}</button></div>
-<div ng-repeat="theatre in timingsCtrl.theatres">{{theatre.TheatreName}} <a ng-repeat="time in theatre.Times" ng-click="timingsCtrl.select(time, theatre.TheatreName)">{{time}}</a></div>
+<div class="container" id="id2">
+  <br>
+  <br>
+  <h1 style="text-align:center;font-size:50px"  ng-repeat="theatre in timingsCtrl.theatres">{{theatre.MovieName}}</h1>
+  <br>
+  <div > </div>
+</div>
+
+<div class="row" class="col-md-12">
+  <div class="col-md-2">
+      &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+  </div>
+<div class="col-md-10">
+  <ul>
+      <li><button class="btn btn-danger"  ng-repeat="date in timingsCtrl.dates"  ng-click="timingsCtrl.getTheatres(date)"><span class="glyphicon glyphicon-calendar"></span>&nbsp &nbsp{{date}}</button></li>
+       <li><h3 ng-repeat="theatre in timingsCtrl.theatres" >{{theatre.TheatreName}}&nbsp &nbsp{{theatre.City}}&nbsp &nbsp{{theatre.PlaceName}}<button class="btn btn-default" ng-repeat="time in theatre.Times" ng-click="timingsCtrl.select(time, theatre.TheatreName)">{{time}}</h3></button></li>
+    </ul>
+  </div>
+</div>
